--- a/config
+++ b/config
@@ -1,11 +1,11 @@
-IMG_DATE="gladys-os"
+IMG_DATE="dass-os"
 IMG_NAME="rpi"
 USE_QEMU=0
-TARGET_HOSTNAME='gladys'
+TARGET_HOSTNAME='dass'
 ENABLE_SSH=1
 FIRST_USER_NAME='pi'
-KEYBOARD_KEYMAP='fr'
-TIMEZONE_DEFAULT='Europe/Paris'
+KEYBOARD_KEYMAP='en'
+TIMEZONE_DEFAULT='Europe/Moscow'
 STAGE_LIST='stage0 stage1 stage2 gladys'
 RELEASE=bullseye
 DEPLOY_COMPRESSION=zip
